[project]
name = "events-map"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=2.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "playwright>=1.48",
    "httpx>=0.27",
    "streamlit>=1.40",
    "supabase>=2.6",
    "streamlit-calendar"
]

[project.scripts]
scrape-ig = "app.scrape.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
